--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,8 @@ env:
   - LC_CTYPE=en_US.UTF-8
   - LANG=en_US.UTF-8
 before_install:
+  - bundle update
   - bundle install
-  - bundle exec pod update
   - bundle exec pod install
   - bundle exec pod keys set Mailgun_Api_Key $MailgunApiKey
 script:
